--- a/src/app/profile/details.component.html
+++ b/src/app/profile/details.component.html
@@ -1,5 +1,6 @@
 ﻿<h1>My Profile</h1>
 <p>
+    <strong>ID: </strong> {{account.id}} <br />
     <strong>Name: </strong> {{account.title}} {{account.firstName}} {{account.lastName}}<br />
     <strong>Email: </strong> {{account.email}}
 </p>
